2023-05-22 repo update: directlink and news