@@ -21,30 +21,13 @@ jobs:
         run: |
           git config user.name "script" 
           git config user.email "<>"
-          git add 'Working/All Plugins/' res/
+          git add .
           git commit -m "Plugin updated" || true
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force: true
-      - name: rename zips
-        run: |
-          import os
-          import glob
-          listing = glob.glob('*.zip')
-          for p in listing:
-            corrected = p.replace(" ", ".")
-            corrected = p.replace("'", ".")
-            corrected = p.replace(",", ".")
-            corrected = p.replace("(", ".")
-            corrected = p.replace(")", ".")
-            corrected = p.replace("&", ".")
-            corrected = p.replace(",", ".")
-            corrected = p.replace("...", ".")
-            corrected = p.replace("..", ".")
-            os.rename(p, corrected)
-        shell: python
       - name: Upload plugins to release
         uses: ncipollo/release-action@v1.11.1
         with:
@@ -53,14 +36,11 @@ jobs:
           allowUpdates: true
           replacesArtifacts: true
           updateOnlyUnreleased: false
-          artifacts: "*.zip"
+          artifacts: "temp/*.zip"
       - name: Delete zips
         run: |
           import os
-          import glob
-          listing = glob.glob('*.zip')
-          for p in listing:
-            os.remove(p)
+          os.rmtree("temp/")
         shell: python
       - name: Make README.md
         run: python res/src/makemd.py
