@@ -1,6 +1,6 @@
 author=zuckung
 website=https://github.com/zuckung/endless-sky-plugins
-directlink=N/A
+directlink=https://github.com/zuckung/endless-sky-plugins/releases/download/Latest/automata.in.human.space.zip
 category=gameplay
 status=made for 0.10.0
 description=(14 ship variants, 16 variants in 4 fleets)
