@@ -1,6 +1,6 @@
 author=zuckung
 website=https://github.com/zuckung/endless-sky-plugins
-directlink=N/A
+directlink=https://github.com/zuckung/endless-sky-plugins/releases/download/Latest/galactic.capital.investment.zip
 category=gameplay
 status=made for 0.10.0
 description=(story, repeatable mission)
