@@ -1,6 +1,6 @@
 author=zuckung
 website=https://github.com/zuckung/endless-sky-plugins
-directlink=N/A
+directlink=https://github.com/zuckung/endless-sky-plugins/releases/download/Latest/snowfeather.robotics.zip
 category=outfits
 status=made for 0.10.0
 description=(story, 1 new outfit)
