@@ -1,6 +1,6 @@
 author=zuckung
 website=https://github.com/zuckung/endless-sky-plugins
-directlink=N/A
+directlink=https://github.com/zuckung/endless-sky-plugins/releases/download/Latest/too.many.asteroids.zip
 category=overhauls
 status=made for 0.10.0
 description=(1-6 system attributes changed, in 540 systems)
