@@ -1,6 +1,6 @@
 author=zuckung
 website=https://github.com/zuckung/endless-sky-plugins
-directlink=N/A
+directlink=https://github.com/zuckung/endless-sky-plugins/releases/download/Latest/unique.fix.zip
 category=overhauls
 status=made for 0.10.0
 description=(3 outfit attributes changed)
